--- a/report/matmek-oblig1.ipynb
+++ b/report/matmek-oblig1.ipynb
@@ -18,16 +18,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\section{1.2.3}\n",
+    "1.2.3\n",
     "\\begin{equation}\n",
     "    u(t,x,y) = e^{i(k_x x + k_y y - w t)}\n",
     "\\end{equation}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "deriverer utrykket med hensyn på t, for å få venstre side. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\frac{d^2}{dt^2} e^{i(k_x x + k_y y - w t)} = i^2 (-1)^2 w^2 e^{i(k_x x + k_y y - w t)}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "deriverer utrykket mhp på x og y, (laplaceoperator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\frac{d^2}{dx^2} e^{i(k_x x + k_y y - w t)} = i^2 (k_x)^2 e^{i(k_x x + k_y y - w t)}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "vi får tilsvarende for y. Så tar vi $c^2$ og setter sammen\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "i^2 w^2 e^{i(k_x x + k_y y - w t)} = c^2 i^2 (k_x)^2 e^{i(k_x x + k_y y - w t)} + c^2 i^2 (k_y)^2 e^2{i(k_x x + k_y y - w t)}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "matmek4270",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
