--- a/report/matmek-oblig1.ipynb
+++ b/report/matmek-oblig1.ipynb
@@ -252,6 +252,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "using Courant number and dispersion relation.\n",
+    "\\begin{equation}\n",
+    "\\quad Co = \\frac{c\\Delta t}{h}, \\quad w = ck\\sqrt{2}\n",
+    "\\end{equation}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\\begin{equation}\n",
     "\\tilde{w} = \\frac{w \\Delta x}{c \\Delta t \\sqrt{2}} = w\n",
     "\\end{equation}\n"
